postCard and homepage route/styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,10 +30,13 @@
                     <div class="navbar-item">
                         <div class="buttons">
                             <button class="button is-info" id="button-signup">
-                                <strong>Sign up</strong>
+                                <strong>signup</strong>
                             </button>
                             <button class="button is-light" id="button-login">
-                                Log in
+                                login
+                            </button>
+                            <button class="button is-light" id="button-login">
+                                logout
                             </button>
                         </div>
                     </div>
