--- a/views/partials/postCard.handlebars
+++ b/views/partials/postCard.handlebars
@@ -2,8 +2,8 @@
     <div class="card-content">
         <div class="media">
             <div class="media-content">
-                <p class="title is-4"><a class="title is-4" href=`/post/{{id}}`>{{title}}</a></p>
-                <p class="subtitle is-6">@{{User.username}}</p>
+                <p class="title is-4"><a post-id="{{id}}"href="/post/{{id}}">{{title}}</a></p>
+                <p class="subtitle is-6"><a href="/user/activity/{{author_id}}">@{{User.username}}</a></p>
             </div>
         </div>
         <div class="content">
