user activity, posts, and comments created routes and handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
         <nav class="navbar is-dark">
             <div class="navbar-brand">
                 <a href="/"
-                    class="navbar-item is-size-4 has-text-weight-semibold has-text-info">&#60;alpha-t3ch&#62;</a>
+                    class="navbar-item is-size-3 has-text-weight-semibold has-text-info my-auto">&#60;alpha-t3ch&#62;</a>
                 <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarFull">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
