--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -2,21 +2,23 @@
     <div class="modal-background" id="login-background"></div>
     <div class="modal-content">
         <div class="box px-6 py-5">
+            <p class="is-size-5">Login:</p>
+            </br>
             <div class="field">
                 <label class="label">Username:</label>
                 <div class="control">
-                    <input type="text" id="username" class="input" placeholder="e.g. ID_10_T">
+                    <input type="text" id="username-login" class="input" placeholder="e.g. ID_10_T">
                 </div>
             </div>
             <div class="field">
                 <label class="label">Password</label>
                 <div class="control">
-                    <input class="input" id="password" type="password" placeholder="********">
+                    <input class="input" id="password-login" type="password" placeholder="********">
                 </div>
             </div>
             <div class="field is-grouped">
                 <p class="control">
-                    <button class="button is-info">login</button>
+                    <button class="button is-info" id="login-btn">login</button>
                 </p>
                 <p class="control">
                     <button class="button is-danger" id="close-login-modal">cancel</button>
