--- a/views/partials/signup.handlebars
+++ b/views/partials/signup.handlebars
@@ -2,6 +2,8 @@
     <div class="modal-background" id="signup-background"></div>
     <div class="modal-content">
         <div class="box px-6 py-5">
+            <p class="is-size-5">Signup:</p>
+            </br>
             <div class="field">
                 <label class="label">Username:</label>
                 <div class="control">
