edit post, add comment

--- a/views/partials/postCard.handlebars
+++ b/views/partials/postCard.handlebars
@@ -1,4 +1,4 @@
-<div class="card my-3" post-id=`{{id}}`>
+<div class="card my-3" post-id="{{id}}" author-id="{{author_id}}">
     <div class="card-content">
         <div class="media">
             <div class="media-content">
