--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,4 @@
-<div class="card my-3" post-id=`{{id}}`>
+<div class="card my-3" post-id="{{id}}" commenter-id="{{commenter_id}}">
     <div class="card-header">
         <p class="title is-5 pl-3 py-2"><a href="/user/{{commenter_id}}/activity/comments">@{{User.username}} said:</a></p>
     </div>
