--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
             <div class="navbar-menu" id="navbarFull">
                 <div class="navbar-start">
                     {{#if sessionInfo.loggedIn}}
-                    <a href="/dashboard" class="navbar-item">dashboard</a>
+                    <a href="/user/{{sessionInfo.user_id}}/activity" class="navbar-item">dashboard</a>
                     <a href="/account" class="navbar-item">edit account</a>
                     {{/if}}
                 </div>
@@ -66,5 +66,7 @@
 <script src="/javascript/signup.js"></script>
 {{/if}}
 <script src="https://kit.fontawesome.com/e5db155810.js" crossorigin="anonymous"></script>
-
+{{#if user.user_match}}
+<script src="/javascript/newPost.js"></script>
+{{/if}}
 </html>
