--- a/views/userActivity/userActivity.handlebars
+++ b/views/userActivity/userActivity.handlebars
@@ -1,13 +1,17 @@
 <div class="section pt-0">
-  <div class="container">
-    <h2 class="is-size-3 has-text-info py-2">{{user.username}}'s Activity</h2>
-  </div>
-  <div class="tabs is-centered has-background-light">
+  <div class="container-is-full-hd is-flex is-justify-content-space-between">
+    <h2 class="is-size-3 has-text-info py-2" data-user-id="{{user.id}}" id="user-activity-header">{{user.username}}'s Activity</h2>
+    {{#if user.user_match}}
+    <button class="button my-auto" id="new-post-btn">+ New Post</button>
+    {{>newPostModal}}
+    {{/if}}
+</div>
+<div class="tabs is-centered has-background-light">
     <ul>
-      <li class="is-active"><a href="/user/{{user.id}}/activity/posts">Posts</a></li>
-      <li><a href="/user/{{user.id}}/activity/comments">Comments</a></li>
+        <li class="is-active"><a href="/user/{{user.id}}/activity">Posts</a></li>
+        <li><a href="/user/{{user.id}}/activity/comments">Comments</a></li>
     </ul>
-  </div>
+</div>
   <div class="section">
     <div id="post-block" class="block">
       {{#each user.Posts as |post|}}
