--- a/views/userActivity/userComments.handlebars
+++ b/views/userActivity/userComments.handlebars
@@ -1,23 +1,29 @@
 <div class="section pt-0">
-  <div class="container">
-    <h2 class="is-size-3 has-text-info py-2">{{user.username}}'s Activity</h2>
+  <div class="container-is-full-hd is-flex is-justify-content-space-between">
+    <h2 class="is-size-3 has-text-info py-2" data-user-id="{{user.id}}" id="user-activity-header">{{user.username}}'s
+      Activity</h2>
+    {{#if user.user_match}}
+    <button class="button my-auto" id="new-post-btn">+ New Post</button>
+    {{>newPostModal}}
+    {{/if}}
   </div>
   <div class="tabs is-centered has-background-light">
     <ul>
-      <li><a href="/user/{{user.id}}/activity/posts">Posts</a></li>
+      <li><a href="/user/{{user.id}}/activity">Posts</a></li>
       <li class="is-active"><a href="/user/{{user.id}}/activity/comments">Comments</a></li>
     </ul>
   </div>
-
   <div class="section">
-    <div id="comment-block" class="hidden">
+    <div id="comment-block">
       {{#each user.Comments as |comment|}}
       <div class="box has-background-dark">
-      <h3 class="is-size-4 has-text-info py-2">Posted on <a post-id="{{post_id}}"href="/post/{{id}}">"{{Post.title}}"</a></h3>
-      {{> comment comment}}
+        <h3 class="is-size-4 has-text-info py-2">Posted on <a post-id="{{post_id}}"
+            href="/post/{{post_id}}">"{{Post.title}}"</a></h3>
+        {{> comment comment}}
       </div>
       {{/each}}
     </div>
   </div>
 </div>
+
 <script src="/javascript/userActivity.js"></script>
