--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -19,7 +19,7 @@
                         <button class="button is-info" id="update-post" type="submit">Update</button>
                     </div>
                     <div class="control">
-                        <button class="button is-danger" id="cancel-update" type="button">Delete</button>
+                        <button class="button is-danger" id="delete-update" type="button">Delete</button>
                     </div>
                     <div class="control">
                         <button class="button is-light" id="cancel-update" type="button">Cancel</button>
