--- a/views/partials/postCard.handlebars
+++ b/views/partials/postCard.handlebars
@@ -3,7 +3,7 @@
         <div class="media">
             <div class="media-content">
                 <p class="title is-4"><a post-id="{{id}}"href="/post/{{id}}">{{title}}</a></p>
-                <p class="subtitle is-6"><a href="/user/{{author_id}}/activity/posts">@{{User.username}}</a></p>
+                <p class="subtitle is-6"><a href="/user/{{author_id}}/activity">@{{User.username}}</a></p>
             </div>
         </div>
         <div class="content">
